# emap-sqlite

./: .gitignore  build_emapcc.sh  db.py  eval.ipynb  eval.py  schema.sql  utils.py
emap/: __init__.py  db.py  schema.sql  utils.py
emap/emapcc/: CMakeLists.txt
emap/emapcc/include/: core.h  db.h
emap/emapcc/src/: emapcc.cpp
emap/rewrites/: __init__.py  basic.py  retiming.py  utils.py
